Updated CSS for mobile version: added styles to prevent horizontal scrolling and adapted margins

--- a/src/styles/App.module.css
+++ b/src/styles/App.module.css
@@ -40,4 +40,8 @@ table button {
 .center{
   margin-top: 100px;
 }
- 
+@media (max-width: 600px) {
+  .table {
+    padding: 10px;
+  }
+}
